--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,71 +2,42 @@
 
 <div id='navbar'>
   <ul>
-    <li id="home">
-      <a href="/index.html">
-        Home
-      </a>
-    </li>
+    <li id="home"><a href="/index.html">HOME</a></li>
     <li id="project">
-      <a href="#">Project</a>
+      <a href="#">PROJECT</a>
       <ul>
         <li><a href="/Description.html">Description</a></li>
-        <li><a href="/Design.html">Design</a></li>
-        <li><a href="/Notebook.html">Notebook</a></li>
-        <li><a href="/Demonstrate.html">Demonstrate</a></li>
-        <li><a href="/Improve.html">Improve</a></li>
-      </ul>
-    </li>
-    <li id="results">
-      <a href="#">Results</a>
-      <ul>
-        <li><a href="/Experiments.html">Experiments</a></li>
+        <li><a href="/Engineering.html">Engineering</a></li>
+        <li><a href="/Implementation.html">Implementation</a></li>
+        <li><a href="/Proof_Of_Concept.html">Proof of concept</a></li>
         <li><a href="/Model.html">Model</a></li>
-        <li><a href="/Results.html">Results</a></li>
-        <li><a href="/InterLab.html">InterLab</a></li>
       </ul>
     </li>
     <li id="parts">
-      <a href="#">Parts</a>
+      <a href="#">PARTS</a>
       <ul>
         <li><a href="/Parts.html">Parts</a></li>
-        <li><a href="/Basic_Part.html">Basic Parts</a></li>
-        <li><a href="/Composite_Part.html">Composite Parts</a></li>
-        <li><a href="/Part_Collection.html">Part Collection</a></li>
+        <li><a href="/Contribution.html">Contribution</a></li>
+        <li><a href="/Improvement.html">Improvement</a></li>
       </ul>
     </li>
-    <li id="safety">
-      <a href="#">Safety</a>
-    </li>
     <li id="hp">
-      <a href="#">Human Practices</a>
+      <a href="#">HUMAN PRACTICES</a>
       <ul>
         <li><a href="/Human_Practices.html">Human Practices</a></li>
-        <li><a href="/Public_Engagement.html">Public Engagement</a></li>
-        <li><a href="/Collaborations.html">Collaborations</a></li>
+        <li><a href="/Education.html">Education</a></li>
+        <li><a href="/Excellence.html">Excellence</a></li>
       </ul>
     </li>
     <li id="team">
-      <a href="#">Team</a>
+      <a href="#">TEAM</a>
       <ul>
-        <li><a href="/Team.html">Team Members</a></li>
+        <li><a href="/Team.html">Members</a></li>
         <li><a href="/Attributions.html">Attributions</a></li>
+        <li><a href="/Collaborations.html">Collaborations</a></li>
+        <li><a href="/Partnership.html">Partnership</a></li>
+        <li><a href="/Safety.html">Safety</a></li>
       </ul>
-    </li>
-    <li id="awards">
-      <a href="#">Awards</a>
-      <ul>
-        <li><a href="/Applied_Design.html">Applied Design</a></li>
-        <li><a href="/Entrepreneurship.html">Entrepreneurship</a></li>
-        <li><a href="/Hardware.html">Hardware</a></li>
-        <li><a href="/Measurement.html">Measurement</a></li>
-        <li><a href="/Model.html">Model</a></li>
-        <li><a href="/Plant.html">Plant</a></li>
-        <li><a href="/Software.html">Software</a></li>
-      </ul>
-    </li>
-    <li id="jf">
-      <a href="https://igem.org/2018_Judging_Form?team=Virginia.html">Judging Form ⇗</a>
     </li>
   </ul>
 </div>
