--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,16 +1,52 @@
 <!-- This footer appears at the bottom of every page that you make. You can customize it with your team logo, sponsors, contact information, etc. -->
 
 <div class="footer-name">
-  <h3>iGEM 2020</h3>
+  <img class="igemlogo" src='/images/waterlooigemlogo.svg'>
 </div>
 <div class="spacer">
+  <div class="linkcol">
+    <h1>PROJECT</h1>
+    <ul>
+      <li><a href="/Description.html">Description</a></li>
+      <li><a href="/Engineering.html">Engineering</a></li>
+      <li><a href="/Model.html">Model</a></li>
+      <li><a href="/Measurement.html">Measurement</a></li>
+      <li><a href="/Implementation.html">Implementation</a></li>
+      <li><a href="/Proof_Of_Concept.html">Proof of concept</a></li>
+    </ul>
+  </div>
+  <div class="linkcol">
+    <h1>PARTS</h1>
+    <ul>
+      <li><a href="/Parts.html">Parts</a></li>
+      <li><a href="/Contribution.html">Contribution</a></li>
+      <li><a href="/Improvement.html">Improvement</a></li>
+    </ul>
+  </div>
+  <div class="linkcol">
+    <h1>HUMAN PRACTICES</h1>
+    <ul>
+      <li><a href="/Human_Practices.html">Human Practices</a></li>
+      <li><a href="/Education.html">Education</a></li>
+      <li><a href="/Excellence.html">Excellence</a></li>
+    </ul>
+  </div>
+  <div class="linkcol">
+    <h1>TEAM</h1>
+    <ul>
+      <li><a href="/Team.html">Members</a></li>
+      <li><a href="/Attributions.html">Attributions</a></li>
+      <li><a href="/Collaborations.html">Collaborations</a></li>
+    </ul>
+  </div>
 </div>
 <!--Code courtesy of https://codepen.io/brandondward/pen/RpyaKL-->
 <div class="social-container">
+  <h1>SOCIAL MEDIA</h1>
   <ul class="social-icons">
-    <li><a href="https://twitter.com"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="https://github.com"><i class="fa fa-github"></i></a></li>
-    <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="mailto:hq@igem.org"><i class="fa fa-envelope-o"></i></a></li>
+    <li><a href="https://www.facebook.com/WaterlooiGEM/"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://twitter.com/waterloo_igem"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://www.instagram.com/waterloo.igem/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://github.com/igem-waterloo"><i class="fa fa-github"></i></a></li>
   </ul>
 </div>
