--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,15 +2,17 @@
 
 <div id='navbar'>
   <ul>
+    <li class="logo"><img src='/images/navbarlogo.svg'></li>
     <li id="home"><a href="/index.html">HOME</a></li>
     <li id="project">
       <a href="#">PROJECT</a>
       <ul>
         <li><a href="/Description.html">Description</a></li>
         <li><a href="/Engineering.html">Engineering</a></li>
+        <li><a href="/Model.html">Model</a></li>
+        <li><a href="/Measurement.html">Measurement</a></li>
         <li><a href="/Implementation.html">Implementation</a></li>
         <li><a href="/Proof_Of_Concept.html">Proof of concept</a></li>
-        <li><a href="/Model.html">Model</a></li>
       </ul>
     </li>
     <li id="parts">
@@ -35,9 +37,8 @@
         <li><a href="/Team.html">Members</a></li>
         <li><a href="/Attributions.html">Attributions</a></li>
         <li><a href="/Collaborations.html">Collaborations</a></li>
-        <li><a href="/Partnership.html">Partnership</a></li>
-        <li><a href="/Safety.html">Safety</a></li>
       </ul>
     </li>
+    <li><a href="/Safety.html">SAFETY</a></li>
   </ul>
 </div>
