--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -819,11 +819,13 @@ footer {
     footer div.footer-name * {
       float: left; }
     .igemlogo {
-      width: 100%; 
-      min-width: 200px;
+      width: 100%;
+      padding: 0 1em;
     }
   footer div.spacer {
     width: calc(60%);
+    display: flex;
+    justify-content: space-evenly;
     float: left;
     margin-left: 0px;
     line-height: 1.5rem;
@@ -846,8 +848,6 @@ footer {
   }
 
   .linkcol {
-    float: left;
-    width: 25%;
     line-height: 24px;
   }
 
@@ -863,9 +863,10 @@ footer {
   
   footer div.social-container {
     width: calc(20%);
-    float: left;
+    float: right;
     margin-left: 0px; 
     height: 12rem;
+    max-width: 150px;
   }
 
 /*Code courtesy of https://codepen.io/brandondward/pen/RpyaKL*/
@@ -879,7 +880,7 @@ footer {
 .social-icons {
   padding: 0;
   list-style: none;
-  margin: 1em; }
+  margin: 0; }
   .social-icons li {
     display: inline-block;
     margin: 0.15em;
