--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1135,12 +1135,12 @@ main {
 
 #homepageDiv h1{
   color: #003650;
-  font-size: 40px;
+  font-size: clamp(.94rem, 0.16rem + 3.12vw, 2.5rem);
 }
 
 #homepageDiv p {
   color: #003650;
-  font-size: 24px;
+  font-size: clamp(0.75rem, 0.375rem + 1.5vw, 1.5rem);
 }
 
 .slogan {
@@ -1150,6 +1150,7 @@ main {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0.5em;
   left: 0;
   right: 0;
 }
@@ -1165,7 +1166,7 @@ main {
   left: 0;
   right: 0;
   line-height: 1.6em;
-  font-size: 54px !important;
+  font-size: clamp(1.8125rem, 1.03125rem + 3.125vw, 3.375rem) !important;
 }
 
 .interested {
@@ -1206,14 +1207,14 @@ main {
   font-weight: bold;
   color: #fff !important;
   position: absolute;
-  top: 35%;
+  top: 33%;
   width: 47%;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   line-height: 1.6em;
-  font-size: 34px !important;
+  font-size: clamp(0.9375rem, 0.34375rem + 2.375vw, 2.125rem) !important;
 }
 
 .hp4 {
@@ -1227,7 +1228,7 @@ main {
   left: 0;
   right: 0;
   line-height: 1.6em;
-  font-size: 10px !important;
+  font-size: clamp(0.3125rem, 0.15625rem + 0.625vw, 0.625rem) !important;
 }
 
 .hp5 {
@@ -1266,12 +1267,17 @@ main {
 #learnmore {
   position: absolute;
   top: 96.5%;
-  width: 65%;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   text-align: center;
+  cursor: pointer;
+}
+
+#learnmore > img {
+  padding: 0 1em;
 }
 
 .centered {
@@ -1281,5 +1287,5 @@ main {
   transform: translate(-50%, -50%);
   font-weight: bold;
   color: #fff !important;
-  font-size: 34px !important;
+  font-size: clamp(1.25rem, 0.8125rem + 1.75vw, 2.125rem) !important;
 }
