fix dropdown so unaffected by changes

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,8 +1,8 @@
 <!--This is the navbar that will appear at the top of every page. You can make new .html pages by adding them to the content folder. -->
 
 <div id='navbar'>
+  <div class="logo"><img src='/images/navbarlogo.svg'></div>
   <ul>
-    <li class="logo"><img src='/images/navbarlogo.svg'></li>
     <li id="home"><a href="/index.html">HOME</a></li>
     <li id="project">
       <a href="#">PROJECT</a>
