--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -710,13 +710,13 @@ header {
     }
     header #navbar ul {
       list-style: none;
-      display: flex;
-      justify-content: space-evenly;
       margin: 0px;
       padding: 0px;
     }
     header #navbar > ul {
       width: calc(70%);
+      display: flex;
+      justify-content: space-evenly;
     }
       header #navbar ul li {
         float: right;
@@ -732,9 +732,13 @@ header {
         /* dividers for easier/organized view*/
         /*a, related to link*/ 
       }
+      header #navbar > ul > li > a {
+        padding: 0 0 !important;
+      }
         header #navbar ul li a, header #navbar ul li a:visited {
           display: flex;
           align-items: center;
+          padding: 0 25px;
           height: 100%;
           width: 100%;
           background: #FFFFFF;
